# rag-server

./: .gitignore  Cargo.toml  README.md
src/: chunker.rs  config.rs  db.rs  embedder.rs  expander.rs  extractor.rs  main.rs  reranker.rs
src/tools/: add_documents.rs  create_collection.rs  delete_collection.rs  delete_documents.rs  ingest_directory.rs  ingest_file.rs  list_collections.rs  mod.rs  query.rs
